--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -50,7 +50,7 @@
 
                     <li class="nav-item">
                         <!--<a class="nav-link" href="#portfolio">Portfolio</a>-->
-                        <a class="nav-link"  (click)="openDistribuidor(LoginDistribuidor)">Distribuidores</a>
+                        <a class="nav-link"  href="javascript:void(0);"(click)="openDistribuidor(LoginDistribuidor)">Distribuidores</a>
                     </li>
 
                     <li class="nav-item">
