--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -56,7 +56,7 @@
               <div class="col-12 col-lg-4 border-right border-primary ">
                 <p class="font1">Mas de 8000</p>
                   <div class="news-thumb">
-                      <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
+                      <a class="news-image-hover news-image-hover-warning">
                           <img src="../../../assets/images/puntos/Joyas.gif" class="img-fluid large-news-image news-image" alt="">
                       </a>  
                       <p class="font1">Diseños diferentes.</p>                                                               
@@ -68,7 +68,7 @@
               <div class="col-12 col-lg-4 border-right border-primary ">
                 <p class="font1">600 distribuidores</p>
                   <div class="news-thumb" >
-                      <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
+                      <a  class="news-image-hover news-image-hover-warning">
                           <img src="../../../assets/images/puntos/Alcance.gif" class="img-fluid large-news-image news-image" alt="">
                       </a>                                                               
                       <p class="font1">en todo el país</p>                                                               
@@ -79,7 +79,7 @@
                 <p class="font1">Presencia en más de</p>
                   <div class="news-thumb" >
                       
-                      <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
+                      <a class="news-image-hover news-image-hover-warning">
                           <img src="../../../assets/images/puntos/Puntos.gif" class="img-fluid large-news-image news-image" alt="">
                       </a>                                            
                       <p class="font1">2000 puntos de venta</p>                                                                                
@@ -151,7 +151,7 @@
   
   
   <div style="width: 100%">
-      <img src="../../../assets/images/fin_pagina/Final.png" class="img-fluid news-image">   
+      <img src="../../../assets/images/fin_pagina/Final.png" class="img-fluid news-image" style="width: 100%">   
   </div>
   
   <!-- <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=5%20de%20febrero%20No.%20442%20Planta%20Baja,%20interior%20A,%20Algar%C3%ADn,%2006880%20Ciudad%20de%20M%C3%A9xico,%20CDMX+(Fonelli)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe></div>  -->
