--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -1,6 +1,7 @@
     <section >
+      <div class="container float-left">
       <div class="row">
-         <div class="col-lg-12">
+         <div class="col-lg-8">
    
            <div class="card">
              <div class="card-body">
@@ -11,7 +12,7 @@
   
                 <div class="form-row">
                   <div class="form-group col-md-6">
-                    <label >Numero</label>
+                    <label class="CamposFonelli">Numero</label>
                     <input 
                       type="text" 
                       id="idNumpPed"
@@ -24,7 +25,7 @@
                     >
                   </div>
                   <div class="form-group col-md-6">
-                    <label >Filial</label>
+                    <label class="CamposFonelli">Filial</label>
                     <input
                       type="text" 
                       id="idFilPed"
@@ -57,7 +58,7 @@
                             #nombre="ngModel"
                             [(ngModel)]="oBuscar.Status"
                           >
-                          <label class="form-check-label" for="gridRadios1"> Activos </label>
+                          <label class="form-check-label CamposFonelli" for="gridRadios1"> Activos </label>
                         </div>
                         <div class="form-check">
                           <input 
@@ -69,7 +70,7 @@
                             #nombre="ngModel"
                             [(ngModel)]="oBuscar.Status"
                           >
-                          <label class="form-check-label" for="gridRadios2"> Inactivos</label>
+                          <label class="form-check-label CamposFonelli" for="gridRadios2"> Inactivos</label>
                         </div>
                         <div class="form-check ">
                           <input 
@@ -81,7 +82,7 @@
                             #nombre="ngModel"
                             [(ngModel)]="oBuscar.Status"
                           >
-                          <label class="form-check-label" for="gridRadios3"> Todos </label>
+                          <label class="form-check-label CamposFonelli" for="gridRadios3"> Todos </label>
                         </div>
                       </div>
                     </div>
@@ -92,13 +93,13 @@
                   <br>   
                   <div class="form-row">
                       <div class="form-group col-md-6">
-                          <button type="submit" (click)="consultaPedido()" class="btn btn-primary">BUSCAR</button>                          
+                          <button type="submit" (click)="consultaPedido()" class=" btnFonelli btn">BUSCAR</button>                          
                       </div>
                   </div>  
                   <p>{{sMensaje}}</p>       
                </form><!-- End General Form Elements -->
              </div>
-             <hr class="my-1" />
+             
            </div>
          </div>
        </div> 
@@ -183,7 +184,7 @@
 
       </div> 
       </div> 
-
+    </div>
   </section>
 
 
