--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -1,6 +1,7 @@
 
  
       <section >
+        <div class="container float-left">
         <div class="row">
           <div class="col-lg-6">
   
@@ -13,7 +14,7 @@
   
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                          <label >Desde cliente</label>
+                          <label class="CamposFonelli">Desde cliente</label>
                           <input 
                             type="text" 
                             id="idDesCli"
@@ -26,7 +27,7 @@
                           >
                         </div>
                         <div class="form-group col-md-6">
-                          <label >Filial</label>
+                          <label class="CamposFonelli">Filial</label>
                           <input 
                             type="text" 
                             id="idDesFil"
@@ -44,7 +45,7 @@
   
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                          <label >Hasta cliente</label>
+                          <label class="CamposFonelli">Hasta cliente</label>
                           <input 
                             type="text" 
                             id="idHasCli"
@@ -57,7 +58,7 @@
                           >
                         </div>
                         <div class="form-group col-md-6">
-                          <label >Filial</label>
+                          <label class="CamposFonelli">Filial</label>
                           <input 
                             type="text" 
                             id="idHasFil"
@@ -104,10 +105,10 @@
   
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <button type="submit" (click)="consultaEstadoCuenta()" class="btn btn-primary">BUSCAR</button>
+                            <button type="submit" (click)="consultaEstadoCuenta()" class="btnFonelli btn">BUSCAR</button>
                         </div>
                         <div class="form-group col-md-6">
-                          <button hidden="{{ bCliente }}" type="submit"  class="btn btn-primary">CATALOGO DE CLIENTES</button>
+                          <button hidden="{{ bCliente }}" type="submit"  class="btnFonelli btn">CATALOGO DE CLIENTES</button>
                       </div>
                     </div>  
                     
@@ -298,7 +299,7 @@
          
         </div> 
   </div> 
-
+</div>
 </section>
   
   
