--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -46,7 +46,7 @@
 
 .font_side {
    color: #003f66;
-   font-size: 22px;
+   font-size: 20px;
    font-family: "Quicksand-SemiBold";
 }
 
@@ -62,6 +62,7 @@
 
 .font_nosotros {
    color: black;
+   font-family: Quicksand-regular;
 }
 
 .fondo_mensaje_sesion {
@@ -101,3 +102,8 @@
   padding: 0;
   background: none;
 }
+
+@font-face {
+   font-family: lato;
+   src: url(../fonts/CormorantGaramond-SemiBold.ttf) format("opentype");
+ }
